# Certis

./: .bandit  .flake8  .gitignore  .pre-commit-config.yaml  .sourcery.yaml  Makefile  README.md  pyproject.toml  requirements-dev.txt  requirements.txt  setup.py  tox.ini
.github/workflows/: code-diagram.yml
certis/: __init__.py  base.py  constants.py  core.py  util.py
certis/strategies/: ma_crossing.py
docs/: certis.base.html  certis.core.html  certis.html  conf.py  py-modindex.html  search.html  searchindex.js
docs/_build/doctrees/: certis.base.doctree  certis.constants.doctree  certis.core.doctree  certis.doctree  certis.util.doctree  environment.pickle  index.doctree
docs/_build/html/: .buildinfo  certis.base.html  certis.constants.html  certis.core.html  certis.html  certis.util.html  genindex.html  index.html  objects.inv  py-modindex.html  search.html  searchindex.js
docs/_build/html/_modules/: index.html
docs/_build/html/_modules/certis/: base.html  core.html  util.html
docs/_modules/certis/: constants.html  core.html
examples/: Quickstart.ipynb  quickstart.ipynb  quickstart.py  requirements.txt
tests/: test_core.py
tests/data/: btc_usd_ohlcv.csv
