[tool.poetry]
name = "certis"
version = "0.1.0"
description = "Lightweight backtesting tool"
authors = ["Yeachan-Heo <rlstart@kakao.com>", "Krystian Safjan <ksafjan@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.10"
pandas = "^1.4.3"
tqdm = "^4.64.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
