[tool.poetry]
name = "certis"
version = "0.1.0"
description = "Lightweight backtesting tool"
authors = ["Yeachan-Heo <rlstart@kakao.com>", "Krystian Safjan <ksafjan@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.10"
pandas = "^1.4.3"
tqdm = "^4.64.0"

[tool.poetry.dev-dependencies]
jupyter = "^1.0.0"
jupyter-contrib-nbextensions = "^0.5.1"
ipywidgets = "^7.7.1"
jupytext = "^1.13.8"
jupyter-black = "^0.3.1"
pytest-icdiff = "^0.5"
pytest-sugar = "^0.9.4"
pre-commit = "^2.19.0"
mypy = "^0.961"
data-science-types = "^0.2.23"
tox = "^3.25.1"
sphinx-rtd-theme = "^1.0.0"
numpy = "^1.23.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
